add winning conditions array

--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 <body>
     <h1>Tic Tac Toe</h1>
     <table>
-        <tr>
+        <tr id="topRow">
             <td id="topLeft">dad</td>
             <td id="topCenter">adad</td>
             <td id="topRight"></td>
         </tr>
-        <tr>
+        <tr id="midRow">
             <td id="midLeft">eae</td>
             <td id="midCenter">aeae</td>
             <td id="midRight">aeea</td>
         </tr>
-        <tr>
+        <tr id="bottomRow">
             <td id="bottomLeft">aera</td>
             <td id="bottomCenter">adfa</td>
             <td id="bottomRight">asdfs</td>
         </tr>
     </table>
+    <button>Reset Game</button>
         
 
     
