add comments functions

--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
-    <table>
+    <table id="gameBoard">
         <tr id="topRow">
-            <td id="topLeft">dad</td>
-            <td id="topCenter">adad</td>
-            <td id="topRight"></td>
+            <td id="topLeft"><div>adfad</div></td>
+            <td id="topCenter"><div>adfsd</div></td>
+            <td id="topRight"><div>adfs</div></td>
         </tr>
         <tr id="midRow">
-            <td id="midLeft">eae</td>
-            <td id="midCenter">aeae</td>
-            <td id="midRight">aeea</td>
+            <td id="midLeft"><div>adasd</div></td>
+            <td id="midCenter"><div>asdfsf</div></td>
+            <td id="midRight"><div>adfsf</div></td>
         </tr>
         <tr id="bottomRow">
-            <td id="bottomLeft">aera</td>
-            <td id="bottomCenter">adfa</td>
-            <td id="bottomRight">asdfs</td>
+            <td id="bottomLeft"><div>dsaff</div></td>
+            <td id="bottomCenter"><div>asdffs</div></td>
+            <td id="bottomRight"><div>asdfafs</div></td>
         </tr>
     </table>
     <button>Reset Game</button>
