add win conditions but not working

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <h1>Tic Tac Toe</h1>
     <table id="gameBoard">
         <tr id="topRow">
-            <td id="topLeft"><div>adfad</div></td>
-            <td id="topCenter"><div>adfsd</div></td>
-            <td id="topRight"><div>adfs</div></td>
+            <td id="topLeft"><div></div></td>
+            <td id="topCenter"><div></div></td>
+            <td id="topRight"><div></div></td>
         </tr>
         <tr id="midRow">
-            <td id="midLeft"><div>adasd</div></td>
-            <td id="midCenter"><div>asdfsf</div></td>
-            <td id="midRight"><div>adfsf</div></td>
+            <td id="midLeft"><div></div></td>
+            <td id="midCenter"><div></div></td>
+            <td id="midRight"><div></div></td>
         </tr>
         <tr id="bottomRow">
-            <td id="bottomLeft"><div>dsaff</div></td>
-            <td id="bottomCenter"><div>asdffs</div></td>
-            <td id="bottomRight"><div>asdfafs</div></td>
+            <td id="bottomLeft"><div></div></td>
+            <td id="bottomCenter"><div></div></td>
+            <td id="bottomRight"><div></div></td>
         </tr>
     </table>
     <button>Reset Game</button>
