add check player array a subset of winning cond

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <td id="bottomRight"><div></div></td>
         </tr>
     </table>
+    <div id="drawGame"></div>
     <button>Reset Game</button>
         
 
